# garmin-ai-coach

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  chainlit.md  chainlit_de-AT.md  pixi.toml  pyproject.toml  pytest.ini  requirements.txt
.chainlit/: config.toml  style.css
.github/workflows/: ci.yml
agents_docs/: langgraph_architecture_diagram.mmd  techStack.md
cli/: README.md  garmin_ai_coach_cli.py  qa_chainlit_app.py
config/: model_pricing.json
core/: __init__.py  config.py
examples/garmin/: test_extractor.py
scripts/: capture_coach_chat_screenshots.py
services/ai/: ai_settings.py  model_config.py
services/ai/langgraph/: __init__.py
services/ai/langgraph/config/: __init__.py  langsmith_config.py
services/ai/langgraph/nodes/: __init__.py  activity_expert_node.py  activity_summarizer_node.py  data_integration_node.py  data_summarizer_node.py  formatter_node.py  metrics_expert_node.py  metrics_summarizer_node.py  node_base.py  orchestrator_node.py  physiology_expert_node.py  physiology_summarizer_node.py  plan_formatter_node.py  plot_resolution_node.py  prompt_components.py  season_planner_node.py  synthesis_node.py  tool_calling_helper.py  weekly_planner_node.py
services/ai/langgraph/schemas/: __init__.py  agent_outputs.py  expert_outputs.py
services/ai/langgraph/state/: __init__.py  training_analysis_state.py
services/ai/langgraph/utils/: __init__.py  langsmith_cost_extractor.py  message_helper.py  output_helper.py  workflow_cost_tracker.py
services/ai/langgraph/workflows/: analysis_workflow.py  planning_workflow.py
services/ai/tools/: __init__.py
services/ai/tools/plotting/: __init__.py  langgraph_plotting_tool.py  plot_storage.py  production_secure_executor.py  reference_resolver.py
services/ai/utils/: cost_tracker.py  plan_storage.py  retry_handler.py
services/garmin/: __init__.py  client.py  competition_models.py  data_extractor.py  models.py
services/garmin/utils/: training_metrics.py
services/outside/: client.py  models.py
tests/: test_cli_e2e.py  test_cost_tracking_integration.py  test_data_extractor_characterization.py  test_data_summarization_nodes.py  test_extract_text_content.py  test_garmin_client.py  test_langgraph_core_migration.py  test_langgraph_foundation.py  test_langgraph_planning_workflow.py  test_langgraph_poc.py  test_model_config.py  test_outside_client.py  test_plotting_tool_integration.py  test_training_metrics.py
